<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".AddActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:duplicateParentState="true"
        android:elevation="4dp">

        <ImageView
            android:id="@+id/imageViewArrowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="Give params"
            android:textAlignment="center"
            android:textColor="#D1D1D1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginEnd="40dp"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="20dp"
                android:paddingEnd="20dp"
                android:text="Country: "
                android:textAlignment="textStart"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/selectedCountry"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:popupBackground="@color/colorPrimaryDark"
                android:text=""
                android:textColor="#8ABFBFBF"
                android:textSize="18sp"
                android:textStyle="italic"
                android:singleLine="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="181dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="20dp"
                        android:text="@string/recovered_string"
                        android:textColor="@color/textColor" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="20dp"
                        android:text="@string/confirmed_string"
                        android:textColor="@color/textColor" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="20dp"
                        android:text="@string/new_recovered_string"
                        android:textColor="@color/textColor" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="115dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="20dp"
                        android:text="@string/deaths_string"
                        android:textColor="@color/textColor" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="20dp"
                        android:text="@string/new_deaths_string"
                        android:textColor="@color/textColor" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="20dp"
                        android:text="@string/new_confirmed_string"
                        android:textColor="@color/textColor" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="20dp"
                        android:text="@string/last_updated"
                        android:textColor="@color/textColor" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkedRecovered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="true"
                    android:padding="20dp" />

                <CheckBox
                    android:id="@+id/checkedConfirmed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="true"
                    android:padding="20dp" />

                <CheckBox
                    android:id="@+id/checkedNewRecovered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="true"
                    android:padding="20dp" />

                <CheckBox
                    android:id="@+id/checkedDeaths"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="true"
                    android:padding="20dp" />

                <CheckBox
                    android:id="@+id/checkedNewDeaths"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="true"
                    android:padding="20dp" />

                <CheckBox
                    android:id="@+id/checkedNewConfirmed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="true"
                    android:padding="20dp" />

                <CheckBox
                    android:id="@+id/checkedLastUpdated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="true"
                    android:padding="20dp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/mainAddButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:padding="10dp"
            android:text="Add"
            android:backgroundTint="@color/colorAccent"/>

    </LinearLayout>
</LinearLayout>